--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -19,12 +19,12 @@
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 30px;
-    border-bottom: 2px solid #3498db;
+    border-bottom: 2px solid #A4B465;
     padding-bottom: 10px;
 }
 #ingredients {
     font-weight: 600;
-    color: #34495e;
+    color: #A4B465;
     display: inline-block;
     margin-bottom: 8px;
 }
@@ -39,11 +39,11 @@
     margin-left: 10px;
 }
 #ingredients_input:focus {
-    border-color: #3498db;
+    border-color: #A4B465;
     outline: none;
 }
 #submit {
-    background-color: #3498db;
+    background-color: #A4B465;
     color: white;
     padding: 12px 24px;
     border: none;
