--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
     
     <div id="top-bar">
         <div class="top-elem">
-            <h1 id="top-title">GreenScore.</h1>
+            <h1 id="top-title">SustainGenius.</h1>
         </div>
 
 
