--- a/templates/signup.html
+++ b/templates/signup.html
@@ -153,7 +153,7 @@ body {
 <body>
 
     <div id="top-bar">
-        <h1 id="top-title">ForVerde.</h1>
+        <h1 id="top-title">SustainGenius.</h1>
     </div>
 
     <div id="mid-container">
